manifests/security/cert-manager.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-staging
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "local.com"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: deanpetrusek-domain-cert-staging
    hosts:
    - "local.com"
