manifests/security/vs-default.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-default
spec:
  hosts:
  - "*"
  gateways:
  - gw-default
  http:
  - match:
    - uri:
        prefix: /golang
    route:
    - destination:
        port:
          number: 8080
        host: svc-golang
  - match:
    - uri:
        prefix: /golang2
    route:
    - destination:
        port:
          number: 8080
        host: svc-golang2
  - match:
    - uri:
        prefix: /member
    route:
    - destination:
        port:
          number: 8000
        host: svc-member
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3000
        host: svc-frontend
