manifests/security/vs-istiosystem.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gw-istiosystem
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*" # Fix to VALID_DOMAIN in PROD
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-istiosystem
  namespace: istio-system
spec:
  hosts:
  - "*" # Fix to VALID_DOMAIN in PROD
  gateways:
  - gw-istiosystem
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        port:
          number: 20001
        host: kiali
